--- a/2_CSS/02_CSS선택자2.html
+++ b/2_CSS/02_CSS선택자2.html
@@ -80,6 +80,29 @@
             <p>나도 후손일까?</p>
         </div>
     </div>
+    <!-- 위에 ul 부모의 자식은 li 전부라서
+        >이 명령어로 하면 다 바뀜 -->
+    <!-- div는 안에 자식 p랑 자식 div 있는 거
+        #test-div > p 하면 위에 두개 p만 변함
+          -->
+
+    <div id="test2-div">
+        <p>test-div의 자식 요소입니다</p>
+        <p>test-div의 후손 요소입니다</p>
+
+        <div>
+            <p>나도 후손일까?</p>
+        </div>
+    </div>
+
+    <div id="test3-div">
+        <p>test-div의 자식 요소입니다</p>
+        <p>test-div의 후손 요소입니다</p>
+
+        <div>
+            <p>나도 후손일까?</p>
+        </div>
+    </div>
 
 
     <hr>
