--- a/2_CSS/00_CSS연습문제.html
+++ b/2_CSS/00_CSS연습문제.html
@@ -25,7 +25,7 @@
             <td></td>
             <td></td>
         </tr>
-        <tr> <!--3행-->
+        <tr id="tr3"> <!--3행-->
             <td class="red"></td>
             <td></td>
             <td></td>
@@ -34,16 +34,16 @@
         </tr>
         <tr id="tr4">
             <td class="red"></td>
-            <td></td>
-            <td></td>
+            <td class="green"></td>
+            <td class="green"></td>
             <td></td>
             <td></td>
         </tr>
         <tr id="tr5">
             <td class="red"></td>
             <td class="red"></td>
-            <td></td>
-            <td></td>
+            <td class="green"></td>
+            <td class="green"></td>
             <td></td>
         </tr>
     </table>
