--- a/2_CSS/05_CSS선택자연습문제.html
+++ b/2_CSS/05_CSS선택자연습문제.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>00_CSS연습문제</title>
+    <title>05_CSS선택자연습문제</title>
     
-    <link rel="stylesheet" href="css/practice.css">
+    <link rel="stylesheet" href="css/selectorPractice.css">
 </head>
 <body>
     <h1>형태 구조 선택자/일반 구조 선택자 이용하기</h1>
