--- a/2_CSS/07_레이아웃스타일1.html
+++ b/2_CSS/07_레이아웃스타일1.html
@@ -11,7 +11,7 @@
     <h1>레이아웃(layout)</h1>
     <pre>
         사전적 의미 : 배치, 정리
-        기술적 의미 : 구성 요소를 제한된 공간에 효울적으로
+        기술적 의미 : 구성 요소를 제한된 공간에 효율적으로
         배치하는 것을 의미
     </pre>
 
