--- a/2_CSS/kh정보교육원.html
+++ b/2_CSS/kh정보교육원.html
@@ -13,32 +13,299 @@
 <body>
     <header> <!--고정-->
         <section class="header1"> <!--맨 윗줄 it,게임 영상-->
-            <section class="blank30">빈칸 30</section>
+            <section class="blank30"></section>
             <section class="web70">
                 <i class="fa-solid fa-location-dot"></i>
-                <ul>
-                    <li>
-                        <a href="https://kh-academy.co.kr/intro/contact.kh?branch=0">IT</a>
-                    </li>
-                </ul>
+                <section>
+                    <ul>
+                        <li>
+                            <a href="https://kh-academy.co.kr/intro/contact.kh?branch=0">IT</a>
+                        </li>
+                        <span>|</span>
+                        <li>
+                            <a href="https://kh-academy.co.kr/intro/contact.kh?branch=3">게임</a>
+                        </li>
+                        <span>|</span>
+                        <li>
+                            <a href="https://kh-academy.co.kr/intro/contact.kh?branch=4">영상</a>
+                        </li>
+                    </ul>
+                </section>
+            </section>
+        </section>
+        <section class="logo">
+            <section class="logo-blank"></section>
+            <section class="logo-left">
+                <a href="#">
+                    <i class="fa-solid fa-phone-volume"></i>
+                    <div>
+                        <p>1544-9970</p>
+                        <p>전국대표문의전화(연중무휴)</p>
+                    </div>
+                </a>
+            </section>
+            <section class="logo-center">
+                <a href="https://kh-academy.co.kr/main/main.kh">
+                    <div>
+                        <img src="../images/logo.jpg">
+                        <p>KH</p>
+                    </div>
+                    <div>정보교육원</div>
+                </a>
+            </section>
+            <section class="logo-right">
+                <a href="https://kh-academy.co.kr/intro/contact.kh">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <div>
+                        <p>IT·게임·영상</p>
+                        <p>지점별 위치 찾기 Click>></p>
+                    </div>
+                </a>
+            </section>
+            <section class="logo-blank"></section>
+        </section>
+        <nav class="list">
+            <ul>
                 <span>|</span>
-                <ul>
-                    <li>
-                        <a href="https://kh-academy.co.kr/intro/contact.kh?branch=3">게임</a>
-                    </li>
-                </ul>
+                <li>국비지원과정</li>
                 <span>|</span>
+                <li>교육원소개</li>
+                <span>|</span>
+                <li>취업지원센터</li>
+                <span>|</span>
+                <li>프로젝트</li>
+                <span>|</span>
+                <li>커뮤니티</li>
+                <span>|</span>
+                <li>산학연계</li>
+                <span>|</span>
+                <li>마이페이지</li>
+                <span>|</span>
+                <li>상담센터</li>
+                <span>|</span>
+            </ul>
+        </nav>
+    </header>
+    
+    <main>
+        <section class="container">
+            <section>
+                <img src="../images/Home.png">
+            </section>
+            <section class="image">
                 <ul>
-                    <li>
-                        <a href="https://kh-academy.co.kr/intro/contact.kh?branch=4">영상</a>
+                    <li class="li-1">
+                        <a href="#">
+                            <p>1544</p>
+                            <p>9970</p>
+                            <p>대표문의</p>
+                        </a>
+                    </li>
+                    <li class="li-2">
+                        <a href="https://kh-academy.co.kr/intro/edu.kh">
+                            <i class="fa-regular fa-calendar-check"></i>
+                            <p>개강일정</p>
+                        </a>
+                    </li>
+                    <li class="li-3">
+                        <a href="https://kh-academy.co.kr/question/simple.kh?location=s">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <p>국비대상자</p>
+                            <p>간편조회</p>
+                        </a>
+                    </li>
+                    <li class="li-4">
+                        <a href="https://kh-academy.co.kr/question/online.kh?location=s">
+                            <i class="fa-solid fa-headset"></i>
+                            <p>온라인 상담</p>
+                        </a>
+                    </li>
+                    <li class="li-5">
+                        <a href="https://kh-academy.co.kr/intro/contact.kh">
+                            <i class="fa-solid fa-route"></i>
+                            <p>오시는길</p>
+                        </a>
+                    </li>
+                    <li class="li-6">
+                        <a href="https://pf.kakao.com/_yxnxnTxd" target="_blank">
+                            <i class="fa-regular fa-comments"></i>
+                            <p>카톡 상담</p>
+                        </a>
                     </li>
                 </ul>
             </section>
         </section>
-        <section></section>
-        <section></section>
-    </header>
-    
-    <section></section>
+        <section class="line">
+            <ul>
+                <li>
+                    <a href="https://kh-academy.co.kr/question/online.kh?location=s">
+                        <i class="fa-solid fa-headset"></i>
+                        <p>온라인 상담</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://kh-academy.co.kr/question/simple.kh?location=s">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <p>국비대상자 간편조회</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://kh-academy.co.kr/question/visit.kh">
+                        <i class="fa-solid fa-building"></i>
+                        <p>방문상담 예약</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://pf.kakao.com/_yxnxnTxd" target="_blank">
+                        <i class="fa-regular fa-comments"></i>
+                        <p>카카오톡 상담</p>
+                    </a>
+                </li>
+                <li class="line-last">
+                    <a href="#">
+                        <i class="fa-solid fa-phone-volume"></i>
+                    </a>
+                    <span>
+                        <p>1544-9970</p>
+                        <p>전국대표문의전화(연중무휴)</p>
+                    </span>
+                </li>
+            </ul>
+        </section>
+        <section class="curriculum">
+            <section class="curriculum-1">
+                <section class="cur-blank"></section>
+                <section>
+                    <div>
+                        교육과정
+                    </div>
+                    <div>
+                        KH정보교육원만의 독보적인 커리큘럼을 만나보세요.
+                    </div>
+                </section>
+                <section>
+                    <div class="cur-div">
+                        <a href="https://kh-academy.co.kr/intro/edu.kh">
+                            개강일정 전체보기 &nbsp; >
+                        </a>
+                    </div>
+                </section>
+                <section class="cur-blank"></section>
+            </section>
+            <section class="curriculum-2">
+                <section class="cur2-blank"></section>
+                <section class="cur2-1">
+                    <a href="https://kh-academy.co.kr/intro/edu.kh">
+                        <p>Class Schedule</p>
+                        <p>전체 개강일정</p>
+                        <p>
+                            IT,게임제작,영상제작 과정의
+                            <br>
+                            개강일정을 보실 수 있습니다.
+                        </p>
+                        <p># IT</p>
+                        <p># 게임제작</p>
+                        <p># 영상제작</p>
+                    </a>
+                </section>
+                <section class="cur2-2">
+                    <div>
+                        <a href="https://kh-academy.co.kr/edu/curriculumDetailView.kh?no=2">
+                            <p>Java Developers</p>
+                            <p>S/W 개발자 과정</p>
+                            <p>
+                                개발자 취업을 위한 필수 지식과
+                                <br>
+                                기술을 이론과 실습을 통해 습득하는
+                                <br>
+                                과정 입니다.
+                            </p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://atentsgame.com/landing.do" target="_blank">
+                            <p>아텐츠게임아카데미</p>
+                            <p>게임 제작자 과정</p>
+                            <p>
+                                기초부터 포트폴리오까지 한걸음씩
+                                <br>
+                                성장하는 재미를 느낄 수 있는
+                                <br>
+                                게임 제작자 과정입니다.
+                            </p>
+                            <p>
+                                <i class="fa-solid fa-ghost"></i>
+                            </p>
+                        </a>
+                    </div>
+                </section>
+                <section class="cur2-3">
+                    <div>
+                        <a href="https://kh-academy.co.kr/edu/curriculumDetailView.kh?no=213&acq=kdt">
+                            <p>K-Digital Training</p>
+                            <p>IaC기반 CDC엔지니어</p>
+                            <p>
+                                실무 기반 프로젝트를 수행하고,
+                                <br>
+                                고급 프로그래밍 기술과 문제해결
+                                <br>
+                                능력을 습득하는 과정입니다.
+                            </p>
+                            <p>
+                                <i class="fa-solid fa-shield-halved"></i> 
+                            </p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://kh-fx.com/landing.do" target="_blank">
+                            <p>KH영상아카데미</p>
+                            <p>영상 제작자 과정</p>
+                            <p>
+                                기초부터 심화까지,
+                                <br>누구나 배울  수 있는 개인 맞춤형
+                                <br>
+                                실무 교육을 제공합니다.
+                            </p>
+                            <p>
+                                <i class="fa-brands fa-youtube"></i>
+                            </p>
+                        </a>
+                    </div>
+                </section>
+                <section class="cur2-4">
+                    <div>
+                        <a href="https://kh-academy.co.kr/edu/curriculumDetailView_kdc.kh?kdc=1&acq=kdc">
+                            <p>K-디지털 기초역량훈련 (KDC)</p>
+                            <p>파이썬 기초</p>
+                            <p>
+                                언제·어디서든 업무와 훈련을
+                                <br>
+                                병행할 수 있도록 100% 원격으로
+                                <br>
+                                운영됩니다.
+                            </p>
+                            <p>
+                                <i class="fa-solid fa-gear"></i>
+                            </p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://kh-academy.co.kr/edu/curriculumDetailView.kh?no=1&acq=security">
+                            <p>Information Security</p>
+                            <p>정보보안 전문가 과정</p>
+                            <p>
+                                현업에서 필요로하는 기초 지식,
+                                <br>
+                                대응 실력을 이론 수업과 프로젝트
+                                <br>
+                                실습을 통해 습득하는 과정 입니다.
+                            </p>
+                        </a>
+                    </div>
+                </section>
+                <section class="cur2-blank"></section>
+            </section>
+        </section>
+    </main>
 </body>
 </html>
