--- a/2_CSS/kh정보교육원.html
+++ b/2_CSS/kh정보교육원.html
@@ -199,17 +199,17 @@
                         <p>Class Schedule</p>
                         <p>전체 개강일정</p>
                         <p>
-                            IT,게임제작,영상제작 과정의
+                            IT, 게임제작, 영상제작 과정의
                             <br>
                             개강일정을 보실 수 있습니다.
                         </p>
-                        <p># IT</p>
-                        <p># 게임제작</p>
-                        <p># 영상제작</p>
+                        <span># IT</span>
+                        <span># 게임제작</span>
+                        <span># 영상제작</span>
                     </a>
                 </section>
                 <section class="cur2-2">
-                    <div>
+                    <div class="cur2-2-1">
                         <a href="https://kh-academy.co.kr/edu/curriculumDetailView.kh?no=2">
                             <p>Java Developers</p>
                             <p>S/W 개발자 과정</p>
@@ -222,7 +222,7 @@
                             </p>
                         </a>
                     </div>
-                    <div>
+                    <div class="cur2-2-2">
                         <a href="https://atentsgame.com/landing.do" target="_blank">
                             <p>아텐츠게임아카데미</p>
                             <p>게임 제작자 과정</p>
@@ -240,7 +240,7 @@
                     </div>
                 </section>
                 <section class="cur2-3">
-                    <div>
+                    <div class="cur2-3-1">
                         <a href="https://kh-academy.co.kr/edu/curriculumDetailView.kh?no=213&acq=kdt">
                             <p>K-Digital Training</p>
                             <p>IaC기반 CDC엔지니어</p>
@@ -256,7 +256,7 @@
                             </p>
                         </a>
                     </div>
-                    <div>
+                    <div class="cur2-3-2">
                         <a href="https://kh-fx.com/landing.do" target="_blank">
                             <p>KH영상아카데미</p>
                             <p>영상 제작자 과정</p>
@@ -273,7 +273,7 @@
                     </div>
                 </section>
                 <section class="cur2-4">
-                    <div>
+                    <div class="cur2-4-1">
                         <a href="https://kh-academy.co.kr/edu/curriculumDetailView_kdc.kh?kdc=1&acq=kdc">
                             <p>K-디지털 기초역량훈련 (KDC)</p>
                             <p>파이썬 기초</p>
@@ -289,7 +289,7 @@
                             </p>
                         </a>
                     </div>
-                    <div>
+                    <div class="cur2-4-2">
                         <a href="https://kh-academy.co.kr/edu/curriculumDetailView.kh?no=1&acq=security">
                             <p>Information Security</p>
                             <p>정보보안 전문가 과정</p>
