--- a/3_javascript/html/03_연산자.html
+++ b/3_javascript/html/03_연산자.html
@@ -82,6 +82,17 @@
     <h3>전위, 후위 연산 확인하기</h3>
     <button onclick="check()">확인하기</button>
 
+    <hr>
+
+    <h3>연습문제</h3>
+ 
+    <div>
+        이름 : <input type="text" id="userName"> <br>
+        나이 : <input type="number" id="userAge"> <br>
+        성별 : <input type="text" id="userGender"> <br>
+        <button type="button" onclick="printJSObject()">JS 객체로 출력하기</button>
+    </div>
+
     <script src="../js/03_연산자.js"></script>
 </body>
 </html>
