--- a/3_javascript/html/02_변수와자료형.html
+++ b/3_javascript/html/02_변수와자료형.html
@@ -39,9 +39,9 @@
         const : 상수, 변수명 중복 불가능, 블록{} 레벨 scope
 
         1순위 : const (JS는 특정 요소를 선택해서 사용하는 경우가 많기 때문에
-                        const 상수에 고정시켜둠)
+                        const 상수에 고정시켜둠) <!--재대입 안됨,변수명 중복 안됨-->
 
-        2순위 : let
+        2순위 : let <!--변수명 중복 안됨, 재대입 가능-->
 
         3순위 : var <!--변수명 중복이 에러를 일으킴, 잘 사용 안함-->
     </pre>
