--- a/1_HTML5/01_글자관련태그.html
+++ b/1_HTML5/01_글자관련태그.html
@@ -92,9 +92,9 @@
             그대로 화면에 표현(출력)함.
         -->
         <pre>
-1번 입니다.
-2번 입니다.
-3번 입니다.
+    1번 입니다.
+    2번 입니다.
+    3번 입니다.
         </pre>
         
         <hr>
@@ -135,6 +135,7 @@
             <!-- del은 없어진 걸로 인식 s태그는 잘못된 걸 강조할 때로 인식 -->
 
             <small>small 태그</small> : 작은 글자 표시 <br>
+            <small>small 태그</small>일반 글씨 크기 <br>
             
             sup 태그(윗첨자) : X<sup>2</sup> <br>
             <!-- 제곱표시 -->
@@ -146,6 +147,9 @@
             <!-- title 속성 넣어서 작성하면 말풍선에 타이틀 내용 나옴 -->
             <abbr title="Hyper Text Transfer Protocol">HTTP</abbr>
         </p>
+        <br>
+        <br>
+        <br>
         <hr>
         <p>
             <mark>태그</mark>들은 해당 태그 내에서 중첩으로 사용 가능하다.<br>
