--- a/1_HTML5/02_목록관련태그.html
+++ b/1_HTML5/02_목록관련태그.html
@@ -48,9 +48,7 @@
             type="i" -> 소문자 로마 숫자 <br>
             type="I" -> 대문자 로마 숫자 <br>
             type="1" -> 숫자(기본값) <br>
-
             start 속성 : 시작 번호 지정 <br>
-
             reversed 속성 : 순서 반대로
         </p>
 
@@ -61,6 +59,18 @@
         </ol>
         <!-- 기본값은 숫자 abc로 바꿀 수 있음 -->
         <ol type="a">
+            <li>김밥</li>
+            <li>서브웨이</li>
+            <li>백반</li>
+        </ol>
+
+        <ol type="i">
+            <li>김밥</li>
+            <li>서브웨이</li>
+            <li>백반</li>
+        </ol>
+
+        <ol type="I">
             <li>김밥</li>
             <li>서브웨이</li>
             <li>백반</li>
@@ -78,7 +88,6 @@
             <li>백반</li> 
         </ol>
         <!-- reversed는 자동완성해도 따옴표 안 나옴 (거꾸로) -->
-
         <hr>
         <!-- 하위 속성  -->
         <ul>
@@ -94,8 +103,6 @@
                 </ol>
             </li>
             <li>대분류 3</li>
-
         </ul>
-    </body>
-    
+    </body>   
 </html>
