--- a/1_HTML5/04_표관련태그.html
+++ b/1_HTML5/04_표관련태그.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>04_표관련태그</title>
+        <title>04_표 관련 태그</title>
 
         <!-- 헤드 태그 안에 css 작성할 수 있음 -->
         <!-- HTML 문서의 스타일(크기, 모양, 색상 등) 을 지정하는 태그 == css -->
         <!-- head 태그 닫히기 전에 작성해야함 -->
-        <style>
+        <!-- <style>
             .tb3 {
                 border: 2px solid black;
                 border-collapse: collapse;
@@ -30,7 +30,7 @@
             .tb3 th, .tb3 td {
                 border: 1px solid blue;
             }
-        </style>
+        </style> -->
         <!-- tb3에 어떤 스타일 지정해줄 것인지 여기서 지정 -->
         <!-- 2픽셀 (조금 더 두꺼움) solid 실선 black 색상 -->
         <!-- 중괄호, 세미콜론 중요함 -->
@@ -44,6 +44,7 @@
             여백 없어지고 실선으로만 나타남 -->
         <!-- .tb3 안쓰고 th, td만 쓰면 페이지 전체 선 색 바뀜 -->
     </head>
+
     <body>
         
         <h1>표 관련 태그</h1>
@@ -156,7 +157,7 @@ tbody : 테이블의 중단 부분 영역(실제 값, 내용)
 tfoot : 테이블의 하단 부분 영역(합계)
         </pre>
 
-        <table class="tb3">
+        <table class="tb3" border="1">
         <!-- tb3이라는 이름의 클래스 지정 -->
         <!-- css에서 사용하는 거 -->
             <thead>
