--- a/1_HTML5/09_입력관련태그.html
+++ b/1_HTML5/09_입력관련태그.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>09_입력관련태그</title>
+        <title>09_입력 관련 태그</title>
     </head>
     <!-- 체크, 검색란 등등 -->
     <body>
@@ -88,7 +88,7 @@
             - step : 증가/감소 단계 지정
         </pre>
 
-        <hd>type="number"</hd>
+        <h4>type="number"</h4>
         <p>
             숫자만 입력할 수 있는 입력상자<br>
             브라우저에 따라 스핀박스 표시되기도 함.
@@ -174,8 +174,8 @@
         <input type="checkbox" name="hobby" id="basketball"> <label for="basketball">농구</label>
 
         <!-- label 쓰는 두번째 방법 ! -->
-        <label> 뜨개질
-            <input type="checkbox">
+        <label> 
+            <input type="checkbox"> 뜨개질
         </label>
         <label>
             <input type="checkbox"> 바느질
@@ -283,7 +283,7 @@
         <!-- 스크립트 안에 작성된 내용은 자바스크립트 영역 -->
 
         <hr>
-
+        
         <h3>fieldset / legend</h3>
         <pre>
             fieldset : 테두리를 만들어 그룹을 구분하는 영역
