--- a/1_HTML5/11_HTML연습문제2.html
+++ b/1_HTML5/11_HTML연습문제2.html
@@ -19,12 +19,13 @@
                     <br>
                     <li>지역 :
                         <select>
-                            <option>부산</option>
                             <option>서울</option>
-                            <option>광주</option>
+                            <option selected>부산</option>
                             <option>대구</option>
+                            <option>인천</option>
                             <option>광주</option>
-                            <option>제주</option>
+                            <option>대전</option>
+                            <option>울산</option>
                         </select>
                     </li>
                 </ol>
