--- a/1_HTML5/10_HTML연습문제1.html
+++ b/1_HTML5/10_HTML연습문제1.html
@@ -16,12 +16,12 @@
             <br><br>
             피자선택 :
             <select>
-                <option>피자를 선택하세요</option>
                 <option>페퍼로니</option>
                 <option>고르곤졸라</option>
                 <option>고구마</option>
                 <option>포테이토</option>
                 <option>쉬림프</option>
+                <option selected>피자를 선택하세요</option>
             </select>
             <fieldset>
                 <legend>피자 사이즈</legend>
