--- a/1_HTML5/12_HTML연습문제3.html
+++ b/1_HTML5/12_HTML연습문제3.html
@@ -51,7 +51,7 @@
                 </tr>
             </table>
         </fieldset>
-        <form>
+        
         <fieldset>
             <legend>추가 정보</legend>
             프로필 사진 <input type="file">
@@ -60,6 +60,7 @@
             <label>
                 <input checked type="radio" name="gender"> 남자
             </label>
+
             <label>
                 <input type="radio" name="gender"> 여자
             </label>
@@ -70,21 +71,31 @@
             <br>
             <label>
                 <input type="checkbox" name="hobby"> 야구
-                <input type="checkbox" name="hobby"> 농구
-                <input type="checkbox" name="hobby"> 축구
-                <br>
-                <input checked type="checkbox" name="hobby"> 공부
-                <input type="checkbox" name="hobby"> 음악감상
-                <br>
-                <input type="checkbox" name="hobby"> 기타
-                <input size="20">
             </label>
+            <label>
+                <input type="checkbox" name="hobby"> 농구
+            </label>
+            <label>
+                <input type="checkbox" name="hobby"> 축구
+            </label>
+            <br>
+            <label>
+                <input checked type="checkbox" name="hobby"> 공부
+            </label>
+            <label>
+                <input type="checkbox" name="hobby"> 음악감상
+            </label>
+            <br>
+            <label>
+                <input type="checkbox" name="hobby"> 기타
+            </label>
+                <input size="20">
             <br><br>
             자기소개
             <br>
             <textarea rows="10" cols="80" style="resize: none;"></textarea>
         </fieldset>
-        </form>
+        
         <br>
         <button type="submit">회원가입</button>
         <button type="reset">다시입력</button>
