--- a/2_CSS/01_CSS개요,CSS선택자1.html
+++ b/2_CSS/01_CSS개요,CSS선택자1.html
@@ -6,7 +6,7 @@
     <title>01_CSS개요,CSS선택자1</title>
 
     <style> /* CSS용 주석 */
-    /* CSS는 title 태그 안에 style 태그 안에 작성 */
+    /* CSS는 head 태그 안에 style 태그 안에 작성 */
     /* style 태그 : css 코드만 작성할 수 있는 영역을 제공하는 태그 */
         
         div {
