--- a/2_CSS/Test.html
+++ b/2_CSS/Test.html
@@ -45,15 +45,15 @@
             </p>
             <p>
                 <button class="fa-solid fa-cake-candles"></button>
-                생년월일 : 1995년 7월 19일
+                생년월일 : 
             </p>
             <p>
                 <button class="fa-solid fa-envelope"></button>
-                E-mail : songjiyoon9507@gmail.com
+                E-mail : 
             </p>
             <p>
                 <button class="fa-solid fa-phone"></button>
-                전화번호 : 010-2066-6592
+                전화번호 : 
             </p>
         </section>
 
