--- a/3_javascript/html/봄버맨.html
+++ b/3_javascript/html/봄버맨.html
@@ -21,8 +21,6 @@
 
     </style>
 
-
-
 </head>
 <body>
     <h1>봄버맨!</h1>
@@ -43,6 +41,6 @@
         <img src="/images/bomberman.png" id="bomberman">
     </div>
 
-    <script src="../js/14_봄버맨.js"></script>
+    <script src="../js/봄버맨.js"></script>
 </body>
 </html>
