--- a/3_javascript/html/19_정규표현식.html
+++ b/3_javascript/html/19_정규표현식.html
@@ -134,7 +134,7 @@
                 <td>비밀번호</td>
                 <td><input id="password" type="password"></td>
                 <td>
-                    <span id="Collet"></span>
+                    <span id="Correct"></span>
                 </td>
             </tr>
             
@@ -148,6 +148,9 @@
                 <!-- 4행 -->
                 <td>이름</td>
                 <td><input id="name"></td>
+                <td>
+                    <span id="correctName"></span>
+                </td>
             </tr>
             
             <tr>
