--- a/3_javascript/html/UI구현Test.html
+++ b/3_javascript/html/UI구현Test.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UI구현다시</title>
+    <title>UI구현Test</title>
 
-    <link rel="stylesheet" href="../css/UI구현.css">
+    <link rel="stylesheet" href="../css/UI구현Test.css">
 </head>
 <body>
     <table>
@@ -13,11 +13,11 @@
             <!-- 1행 -->
             <th>너비 :</th>
             <td>
-                <input type="number" class="input"> px
+                <input type="number" id="width"> px
             </td>
             <th>높이 :</th>
             <td>
-                <input type="number" class="input"> px
+                <input type="number" id="height"> px
             </td>
         </tr>
 
@@ -25,30 +25,30 @@
             <!-- 2행 -->
             <th>글자크기 :</th>
             <td>
-                <input type="number" class="input"> px
+                <input type="number" id="fontSize"> px
             </td>
             <th>굵기 :</th>
             <td>
-                <label> 보통 <input type="radio" name="fontWeight" class="input"></label>
-                <label> 굵게 <input type="radio" name="fontWeight" class="input"></label>
+                <label> 보통 <input type="radio" name="fontWeight" value="normal"></label>
+                <label> 굵게 <input type="radio" name="fontWeight" value="bold"></label>
             </td>
         </tr>
 
         <tr>
             <!-- 3행 -->
             <th>글자색</th>
-            <td><input type="text" class="input"></td>
+            <td><input type="text" id="fontColor"></td>
             <th>배경색</th>
-            <td><input type="text" class="input"></td>
+            <td><input type="text" id="bgc"></td>
         </tr>
 
         <tr>
             <!-- 4행 -->
             <th>가로정렬 :</th>
             <td colspan="3">
-                <label> 왼쪽 <input type="radio" name="col" class="input"></label>
-                <label> 가운데 <input type="radio" name="col" class="input"></label>
-                <label> 오른쪽 <input type="radio" name="col" class="input"></label>
+                <label> 왼쪽 <input type="radio" name="row"  value="left"></label>
+                <label> 가운데 <input type="radio" name="row" value="center"></label>
+                <label> 오른쪽 <input type="radio" name="row" value="right"></label>
             </td>
         </tr>
 
@@ -56,9 +56,9 @@
             <!-- 5행 -->
             <th>세로정렬 :</th>
             <td colspan="3">
-                <label> 위 <input type="radio" name="row" class="input"></label>
-                <label> 가운데 <input type="radio" name="row" class="input"></label>
-                <label> 아래 <input type="radio" name="row" class="input"></label>
+                <label> 위 <input type="radio" name="col" value="flex-start"></label>
+                <label> 가운데 <input type="radio" name="col" value="center"></label>
+                <label> 아래 <input type="radio" name="col" value="flex-end"></label>
             </td>
         </tr>
 
@@ -66,7 +66,7 @@
             <!-- 6행 -->
             <th>출력 문자열 :</th>
             <td colspan="3">
-                <input type="text" class="input">
+                <input type="text" id="print">
             </td>
         </tr>
     </table>
@@ -77,6 +77,6 @@
 
     </div>
 
-    <script src="../js/UI구현.js"></script>
+    <script src="../js/UI구현Test.js"></script>
 </body>
 </html>
