--- a/3_javascript/JS문제집/html/2.입력된수만큼input만들고합계구하기.html
+++ b/3_javascript/JS문제집/html/2.입력된수만큼input만들고합계구하기.html
@@ -26,7 +26,7 @@
         <!-- <input type="number" class="input-number"> -->
     </div>
 
-    <script>
+    <script src="../js/2.입력된수만큼input만들고합계구하기.js">
     </script>
 </body>
 </html>
