--- a/3_javascript/JS문제집/html/4.체크된과일개수세기.html
+++ b/3_javascript/JS문제집/html/4.체크된과일개수세기.html
@@ -1,47 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        .row > label{
-            display: inline-block;
-            width: 50px;
-        }
+<html lang="ko">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>4.체크된 과일 개수 세기</title>
+        <style>
+            .row > label{
+                display: inline-block;
+                width: 50px;
+            }
 
-        .row > input[type="number"]{
-            width: 50px;
-        }
-    </style>
-</head>
-<body>
-    <div class="row">
-        <input type="checkbox" class="fruit" id="apple">
-        <label for="apple">사과</label>
-        <span>2000</span>원
-        <input type="number" value="0"> 개
-    </div>
-    <div class="row">
-        <input type="checkbox" class="fruit" id="banana">
-        <label for="banana">바나나</label>
-        <span>3000</span>원
-        <input type="number" value="0"> 개
-    </div>
-    <div class="row">
-        <input type="checkbox" class="fruit" id="melon">
-        <label for="melon">메론</label>
-        <span>5000</span>원
-        <input type="number" value="0"> 개
-    </div>
+            .row > input[type="number"]{
+                width: 50px;
+            }
+        </style>
+    </head>
+    
+    <body>
+        <div class="row">
+            <input type="checkbox" class="fruit" id="apple">
+            <label for="apple">사과</label>
+            <span>2000</span>원
+            <input type="number" value="0"> 개
+        </div>
+        <div class="row">
+            <input type="checkbox" class="fruit" id="banana">
+            <label for="banana">바나나</label>
+            <span>3000</span>원
+            <input type="number" value="0"> 개
+        </div>
+        <div class="row">
+            <input type="checkbox" class="fruit" id="melon">
+            <label for="melon">메론</label>
+            <span>5000</span>원
+            <input type="number" value="0"> 개
+        </div>
 
-    <button id="btn">count</button>
-    <div id="result">
-        <!-- 사과 3개 바나나 2개 메론 1개 총합 17000원 -->
-    </div>
+        <button id="btn">count</button>
+        <div id="result">
+            <!-- 사과 3개 바나나 2개 메론 1개 총합 17000원 -->
+        </div>
 
-    <script src="../js/4.체크된과일개수세기.js">
-    </script>
-</body>
+        <script src="../js/4.체크된과일개수세기.js">
+        </script>
+    </body>
 </html>
