--- a/3_javascript/JS문제집/html/6.김밥집키오스크.html
+++ b/3_javascript/JS문제집/html/6.김밥집키오스크.html
@@ -143,7 +143,7 @@
         <div id="total">합계: ₩0</div>
     </footer>
 
-    <script>
+    <script src="../js/6.김밥집키오스크.js">
     </script>
 
 </body>
