--- a/1_HTML5/00_세미로그인.html
+++ b/1_HTML5/00_세미로그인.html
@@ -62,7 +62,8 @@
             </form>
             <!-- 오른쪽 -->
             <div  class="right">
-                <img src="https://images.unsplash.com/photo-1602580551823-8aac85ab9997?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fGNsZWFufGVufDB8fDB8fHww">
+                <!-- <img src="/images/KakaoTalk_20240408_173754150.jpg"> -->
+                <!-- <img src="https://images.unsplash.com/photo-1602580551823-8aac85ab9997?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fGNsZWFufGVufDB8fDB8fHww"> -->
                 <!-- <img src="https://images.unsplash.com/photo-1504608524841-42fe6f032b4b?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"> -->
             </div>
 
